<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="RunSteam" Id="{475fa9dc-9a0d-4478-a41e-ad86e1ec38db}" SpecialFunc="None">
    <Declaration><![CDATA[
// CALCULATE NEXT STEAM TEMPURATURE

FUNCTION RunSteam

VAR
	
	// User input target
	targ : REAL := userin.steam_temp;
	enabled : bool := userin.enable_steam;
	
	// Import steam parameters for clarity
	now  : REAL := steam.now;
	maxi : REAL := steam.maxi;
	mini : REAL := steam.mini;
	step : REAL := steam.step * userin.time_step;
	
	// Calculation variables
	new  : REAL;
	diff : REAL;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Import target temp from GUI
steam.target := targ;

// Validation
IF step <= 0 THEN
	RETURN;
ELSIF targ > maxi THEN
	targ := maxi;
ELSIF targ < mini THEN
	targ := mini;
END_IF

// Manual override
IF NOT enabled THEN
	targ := 20;
END_IF


// Calculate what change is needed to meet the target
diff := targ - now;


// LESS than target and MORE than a step away
IF diff >= step THEN
	// New temp is this plus step
	new := now + step;	

// GREATER then target and MORE than a step away
ELSIF diff <= -step THEN
	// New temp is this minus step
	new := now - step;

// Is correct or within one step
ELSE
	new := targ;
END_IF

// Save new value
temp.wall := new;
steam.now := new;]]></ST>
    </Implementation>
    <LineIds Name="RunSteam">
      <LineId Id="105" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="158" Count="2" />
      <LineId Id="69" Count="0" />
      <LineId Id="73" Count="1" />
      <LineId Id="70" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="132" Count="1" />
      <LineId Id="135" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="58" Count="1" />
      <LineId Id="43" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="31" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>